--- a/static/stat671/hw2_stat671.tex
+++ b/static/stat671/hw2_stat671.tex
@@ -1,7 +1,7 @@
 
 \documentclass[11pt]{article}
 \setlength{\textwidth}{7in} \setlength{\textheight}{9.8in}
-\setlength{\topmargin}{-0.5in} \setlength{\oddsidemargin}{-0.25in}
+\setlength{\topmargin}{-0.8in} \setlength{\oddsidemargin}{-0.25in}
 \setlength{\evensidemargin}{-0.25in}
 
 
@@ -17,10 +17,9 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{}
-\rhead{Shen Qu}
-\lhead{Homework2}
+\rhead{Homework2  Page \thepage}
+\lhead{Shen Qu}
 \chead{STAT 671}
-\rfoot{Page \thepage}
 
 \DeclareMathOperator{\trace}{trace}
 
@@ -58,8 +57,8 @@ Therefore, $\min(x,y) = \int_0^\infty \mathbb{I}_{t\leq x} \mathbb{I}_{t\leq y} 
 \vspace{2mm}
 $K(x,y)=\min(x,y)=\int_0^\infty \mathbb{I}_{t\leq x} \mathbb{I}_{t\leq y} dt=\min(y,x)=K(y,x)$ symmetric
 
-$\sum_{i=1}^n\sum_{j=1}^n\alpha_i\alpha_j\min(x,y)=\int_0^\infty \sum_{i=1}^n\alpha_i\mathbb{I}_{t\leq x} \sum_{j=1}^n\alpha_j\mathbb{I}_{t\leq y} dt=\int_0^\infty (\sum_{i=1}^n\alpha_i\mathbb{I}_{t\leq x})^2dt\ge0$
-\vspace{3mm}
+$$\sum_{i=1}^n\sum_{j=1}^n\alpha_i\alpha_j\min(x,y)=\int_0^\infty \sum_{i=1}^n\alpha_i\mathbb{I}_{t\leq x} \sum_{j=1}^n\alpha_j\mathbb{I}_{t\leq y} dt=\int_0^\infty (\sum_{i=1}^n\alpha_i\mathbb{I}_{t\leq x})^2dt\ge0$$
+
 
 
 \item Show that $\max(x,y)$ is not a pd kernel over  $\mathbb{R}^+$. 
@@ -73,9 +72,9 @@ The Gram Matrix
 $$M(x,y)=\begin{bmatrix}\max(x, x) & \max(x, y)\\\max(x,y) & \max(y,y)\end{bmatrix} =
        \begin{bmatrix}x &y \\y & y\end{bmatrix}=xy-y^2\le 0$$
 
-When $y\le x$ is the same. $M(x,y)=xy-x^2\le 0$
+When $y\le x$, it is the same. $M(x,y)=xy-x^2\le 0$
 
-Therefore, $\max(x,y)$ can not be a pd kernel over  $\mathbb{R}^+$
+Therefore, $\max(x,y)$ can not be a p.d. kernel over  $\mathbb{R}^+$
 
 
 \item Consider a probability space $(\Omega,\mathcal{A},P)$
@@ -92,8 +91,8 @@ $K_1(A,B)=P(A \cap B)=P(B \cap A)=K_1(B,A)$ symmetric
 
 $P(A)=E[\mathbb{I}_A]$; $P(B)=E[\mathbb{I}_B]$; $P(A\cap B)=E[\mathbb{I}_A\mathbb{I}_B]$
 
-$\sum_{i=1}^n\sum_{j=1}^n\alpha_i\alpha_jE[\mathbb{I}_{A_i}\mathbb{I}_{A_j}]=E[\sum_{i=1}^n\sum_{j=1}^n\alpha_i\alpha_j\mathbb{I}_{A_i}\mathbb{I}_{A_j}]=E[\|\sum_{i=1}^n\alpha_i\mathbb{I}_{A_i}\|^2]\ge0$
-\vspace{3mm}
+$$\sum_{i=1}^n\sum_{j=1}^n\alpha_i\alpha_jE[\mathbb{I}_{A_i}\mathbb{I}_{A_j}]=E[\sum_{i=1}^n\sum_{j=1}^n\alpha_i\alpha_j\mathbb{I}_{A_i}\mathbb{I}_{A_j}]=E[(\sum_{i=1}^n\alpha_i\mathbb{I}_{A_i})^2]\ge0$$
+
 
 \item Define for any two events $A$ and $B$, 
 $K_2(A,B)=P(A \cap B)-P(A)P(B)$
@@ -103,7 +102,7 @@ Verify that $K_2$ is positive definite.
 \vspace{2mm}
 $K_2(A,B)=P(A \cap B)-P(A)P(B)=E[\mathbb{I}_A\mathbb{I}_B]-E[\mathbb{I}_A]E[\mathbb{I}_B]=Cov[\mathbb{I}_A,\mathbb{I}_B]$
 
-$\sum_{i=1}^n\sum_{j=1}^n\alpha_i\alpha_jCov[\mathbb{I}_{A_i},\mathbb{I}_{A_j}]=Cov[\sum_{i=1}^n\alpha_i\mathbb{I}_{A_i},\sum_{j=1}^n\alpha_j\mathbb{I}_{A_j}]=Var[\sum_{i=1}^n\alpha_i\mathbb{I}_{A_i}]\ge 0$
+$$\sum_{i=1}^n\sum_{j=1}^n\alpha_i\alpha_jCov[\mathbb{I}_{A_i},\mathbb{I}_{A_j}]=Cov[\sum_{i=1}^n\alpha_i\mathbb{I}_{A_i},\sum_{j=1}^n\alpha_j\mathbb{I}_{A_j}]=Var[\sum_{i=1}^n\alpha_i\mathbb{I}_{A_i}]\ge 0$$
 
 
 
@@ -149,26 +148,21 @@ $<f_{S_1},f_{S_2}>=<S_1,S_2>_F$
 \begin{enumerate}
 \item Verify the reproducing property. 
 
-$$\mathcal{H} = \{f_S: f_S(x)=x^TS x;\}$$
-
 $\mathcal{H}$ contains all the functions 
-
 $k(\cdot,x_i): t\mapsto k(t,x)=(t^Tx)(t^Tx)=x^T\cdot (tt^T)\cdot x=f_t(x)$
 
-$$ \langle f_{S_1},k(\cdot,x_i)\rangle_{\mathcal{H}}=\langle f_{S_1},f_{xx^T}\rangle_{\mathcal{H}}=\langle S_1,xx^T\rangle_{\mathcal{F}}=\trace[S_1xx^T]=\trace[x^TS_1x]=x^TS_1 x= f_{S_1}(x)$$
+$$ \langle f_{S},k(\cdot,x)\rangle_{\mathcal{H}}=\langle f_{S},f_{xx^T}\rangle_{\mathcal{H}}=\langle S,xx^T\rangle_{\mathcal{F}}=\trace[Sxx^T]=\trace[x^TSx]=x^TS x= f_{S}(x)$$
 
-Frobenius Norm
-
-$\therefore\langle f_{S_1},k(\cdot,x)\rangle_{\mathcal{H}}=f_{S_1}(x)$ for each $f\in\mathcal{H}$, $x\in\mathcal{X}$
+$\therefore\langle f_{S},k(\cdot,x)\rangle_{\mathcal{H}}=f_{S}(x)$ for each $f\in\mathcal{H}$, $x\in\mathcal{X}$
 
 
 \item Why do we require that $S$ is symmetric?
 
-$\underset{(d,d)}{S}$ is a symmetric Matrix,
+Only if $\underset{(d,d)}{S}$ is a symmetric Matrix, $t^Tx=x^Tt$.
 
 %$$[S_1]_{ij}[S_2]_{ij}=\trace[(x_i^Tx_j)(y_j^Ty_i)]=\trace[(y_ix_i^T)(x_jy_j^T)]=\langle x_iy_i^T,x_jy_j^T\rangle_{\mathcal{F}}=\langle z_i,z_j\rangle_{\mathbb{R}^{n^2}}$$
 
-If not, we can not complete the step of $(t^Tx)(t^Tx)=x^T\cdot (tt^T)\cdot x$
+If not, we can not complete the step of $(t^Tx)(t^Tx)=x^T\cdot (tt^T)\cdot x$ in (b).
 
 
 \end{enumerate}
@@ -178,23 +172,24 @@ If not, we can not complete the step of $(t^Tx)(t^Tx)=x^T\cdot (tt^T)\cdot x$
 \begin{enumerate}
 \item What is the RKHS associated with the kernel $K$? no proof is required. 
 
-$$\{f_{S,s_0}; f_S(x)=x^T S x+2s^Tx+s_0^2\}$$
+$$\{f_{S,s,s_0}: f_{S,s,s_{0}}(x)=x^T S x+2s_0 s^Tx+s_0^2;\quad S\in\mathbb{R}^{d\times d},s\in\mathbb{R}^{d},s_0\in\mathbb{R}\}$$
 
-where $S$ is a symmetric $(d,d)$ matrix
 
 \item What is the inner product in this RKHS? no proof required.  
 
 
-$$\langle f_{S_1},f_{S_2}\rangle_{\mathcal{H}}=\langle S_1,S_2\rangle_{\mathcal{F}}+\frac{s_0^2}c$$
+$$\langle f_{S_1,s_1,s_{10}},f_{S_2,s_2,s_{20}}\rangle_{\mathcal{H}}=\langle S_1,S_2\rangle_{\mathcal{F}}+\frac{2s_{10}s_{20}}c(s_1^Ts_2+\frac{s_{10}s_{20}}c)$$
 
 \item Verify the reproducing property
 
 $\mathcal{H}$ contains all the functions 
+$k(\cdot,x_i): t\mapsto k(t,x)=(t^Tx+c)^2=x^T\cdot (tt^T)\cdot x+2ct^Tx+c^2=f_t(x)$
 
-$k(\cdot,x_i): t\mapsto k(t,x)=(t^Tx+c)(t^Tx+c)=x^T\cdot (tt^T)\cdot x+2ct^Tx+c^2=f_t(x)$
 
+$$\langle f_{S,s,s_{0}},k(\cdot,x)\rangle_{\mathcal{H}}=\langle f_{S,s,s_{0}},f_{xx^T,x,c}\rangle_{\mathcal{H}}=\langle S,xx^T\rangle_{\mathcal{F}}+\frac{2s_{0}c}c(s^Tx+\frac{s_{0}c}c)$$
+$$=x^T Sx+2s_{0}s^Tx+s_0^2= f_{S,s,s_{0}}(x)$$
 
-$$ \langle f_{S},k(\cdot,x_i)\rangle_{\mathcal{H}}=\langle f_{S},f_{xx^T}\rangle_{\mathcal{H}}=\langle S,xx^T\rangle_{\mathcal{F}}=x^T Sx+2s^Tx+s_0^2= f_{S}(x)$$
+$\therefore\langle f_{S,s,s_{0}},k(\cdot,x)\rangle_{\mathcal{H}}=f_{S,s,s_{0}}(x)$ for each $f\in\mathcal{H}$, $x\in\mathcal{X}$
 
 \end{enumerate}
 
@@ -205,26 +200,25 @@ $$ \langle f_{S},k(\cdot,x_i)\rangle_{\mathcal{H}}=\langle f_{S},f_{xx^T}\rangle
 
 \section{Fisher kernel} 
 Let $\theta \in \mathbb{R}$ be a parameter and let $p_\theta$ be a probabilistic model (i.e a point mass function or a density) over a set $\mathcal{X}$ indexed by $\theta$. Let $\theta_0 \in \mathbb{R}$ be a specific value for $\theta$.
-
 Let us define the Fisher score at $x \in \mathcal{X}$ as
 $\phi(x,\theta_0) = \frac{\delta}{\delta \theta} \ln p_\theta(x) \mbox{ evaluated at } \theta=\theta_0$
 assuming that this quantity exists. 
-
 Define $I(\theta)$, the Fisher information associated with the parameter $\theta$, i.e., 
 $I(\theta)=E[\phi^2(X,\theta)]$
 where $E$ stands for expectation and $X$ is a random variable with distribution $p_\theta$. 
-
 The Fisher kernel is then 
 $k(x,x')=\frac{\phi(x,\theta_0)\phi(x',\theta_0)}{I(\theta_0)}$
 where 
 \begin{enumerate}
 \item Verify that $k(.,.)$ is a positive definite kernel over $\mathcal{X}$
 
-$k(x,x')=\frac{\phi(x,\theta_0)\phi(x',\theta_0)}{I(\theta_0)}=\frac{\phi(x',\theta_0)\phi(x,\theta_0)}{I(\theta_0)}=k(x',x)$ symmetric
+$k(x,x')=\frac{\phi(x,\theta_0)\phi(x',\theta_0)}{I(\theta_0)}=\frac{\phi(x',\theta_0)\phi(x,\theta_0)}{I(\theta_0)}=k(x',x)$ symmetric.
 
+For $I(\theta)=E[\phi^2(X,\theta)]\ge0$,
 
-$k(x,x')=\frac{1}{I(\theta_0)}\sum_{i=1}^n\alpha_i\phi(x_i,\theta_0)\sum_{j=1}^n\alpha_j\phi(x_j,\theta_0)=\frac{1}{I(\theta_0)}\|\sum_{i=1}^n\alpha_i\phi(x_i,\theta_0)\|^2\ge0$
+$k(x,x')=\frac{1}{I(\theta_0)}\sum_{i=1}^n\alpha_i\phi(x_i,\theta_0)\sum_{j=1}^n\alpha_j\phi(x_j,\theta_0)=\frac{1}{I(\theta_0)}[\sum_{i=1}^n\alpha_i\phi(x_i,\theta_0)]^2\ge0$
 
+$\therefore k(.,.)$ is a positive definite kernel over $\mathcal{X}$
 
 \item Consider the following model: $x \in \{0,1\}$, $X \sim Bernoulli(\theta)$, $0 < \theta < 1$, that is
 $p_\theta(x)=\theta^x(1-\theta)^{(1-x)}$
@@ -242,27 +236,27 @@ $$I(\theta)=E[\phi^2(X,\theta)]=E[(\frac{X-\theta}{\theta(1-\theta)})^2]
 =\frac{\theta(1-\theta)}{\theta^2(1-\theta)^2}=\frac{1}{\theta(1-\theta)}$$
 
 
-$$k(x,x')=\frac{\phi(x,\theta_0)\phi(x',\theta_0)}{I(\theta_0)}=\frac{(x-\theta_0)(x'-\theta_0)}{\theta_0^2(1-\theta_0)^2}\theta_0(1-\theta_0)=\frac{(x-\theta_0)(x'-\theta_0)}{\theta_0(1-\theta_0)}$$
+$$k(x,x')=\frac{\phi(x,\theta_0)\phi(x',\theta_0)}{I(\theta_0)}=\frac{(x-\theta_0)(x'-\theta_0)}{\theta_0^2(1-\theta_0)^2}\theta_0(1-\theta_0)=\frac{(x-\theta_0)(x'-\theta_0)}{\theta_0(1-\theta_0)} \qquad\hfill\square$$
 
 \item Assume now $x=(x_1,x_2)$ with $x_1 \in \{0,1\}$ and $x_2 \in \{0,1\}$. 
 We consider the following model where $X=(X_1,X_2)$, $X_1$ and $X_2$ are independent with the same $Bernoulli(\theta)$ distribution. 
 Compute $k(x,x')$. 
 
 \begin{align*}
-  p_\theta(\vec x)&=p_\theta(x_1)p_\theta(x_2)=\theta^{x_1+x_2}(1-\theta)^{2-x_1-x_2} && why?\\
-  \ln p_\theta(x)&=(x_1+x_2)\ln\theta+(2-x_1-x_2)\ln(1-\theta)\\
-  \phi(\vec x,\theta)&= \frac{d}{d \theta} \ln p_\theta(x)=\frac{x_1+x_2}{\theta}+\frac{2-x_1-x_2}{1-\theta}=\frac{x_1+x_2-2\theta}{\theta(1-\theta)}
+  p_\theta(\vec x)\underset{x_1\perp x_2}{=}&p_\theta(x_1)p_\theta(x_2)=\theta^{x_1+x_2}(1-\theta)^{2-x_1-x_2}\\
+  \ln p_\theta(x)=&(x_1+x_2)\ln\theta+(2-x_1-x_2)\ln(1-\theta)\\
+  \phi(\vec x,\theta)=& \frac{d}{d \theta} \ln p_\theta(x)=\frac{x_1+x_2}{\theta}+\frac{2-x_1-x_2}{1-\theta}=\frac{x_1+x_2-2\theta}{\theta(1-\theta)}
 \end{align*}
 
 \begin{align*}
-I(\theta)&=E[\phi^2(\vec X,\theta)]=\frac{E[(X_1+X_2-2\theta)^2]}{\theta^2(1-\theta)^2}\\
-&\underset{x_1\perp x_2}{=}\frac{E[(X_1-\theta)^2]+E[(X_2-\theta)^2]+2(E[X_1]-\theta)(E[X_2]-\theta)}{\theta^2(1-\theta)^2}\\
-&=\frac{V[X_1]+V[X_2]-0}{\theta^2(1-\theta)^2}=\frac{2\theta(1-\theta)}{\theta^2(1-\theta)^2}=\frac{2}{\theta(1-\theta)}
+I(\theta)=&E[\phi^2(\vec X,\theta)]=\frac{E[(X_1+X_2-2\theta)^2]}{\theta^2(1-\theta)^2}\\
+\underset{x_1\perp x_2}{=}&\frac{E[(X_1-\theta)^2]+E[(X_2-\theta)^2]+2(E[X_1]-\theta)(E[X_2]-\theta)}{\theta^2(1-\theta)^2}\\
+=&\frac{V[X_1]+V[X_2]-0}{\theta^2(1-\theta)^2}=\frac{2\theta(1-\theta)}{\theta^2(1-\theta)^2}=\frac{2}{\theta(1-\theta)}
 \end{align*}
 
 \begin{align*}
 k(x,x')&=\frac{\phi(\vec x,\theta_0)\phi(\vec x',\theta_0)}{I(\theta_0)}=\frac{(x_1+x_2-2\theta_0)(x'_1+x'_2-2\theta_0)}{\theta_0^2(1-\theta_0)^2}\frac{\theta_0(1-\theta_0)}2\\
-&=\frac{(x_1+x_2-2\theta_0)(x'_1+x'_2-2\theta_0)}{2\theta_0(1-\theta_0)}
+&=\frac{(x_1+x_2-2\theta_0)(x'_1+x'_2-2\theta_0)}{2\theta_0(1-\theta_0)}&& \square
 \end{align*}
 
 \end{enumerate}
