--- a/static/stat572/hw3_stat572.Rmd
+++ b/static/stat572/hw3_stat572.Rmd
@@ -43,7 +43,7 @@ p(y_{1:n}|\mu) &=\prod_{i=1}^n \left(\mathbf{1}_{\{y_i\in\mathbb{R}\}}(\frac{\la
 @2. Use the likelihood derived above in exponential family form to show that the conjugate family of priors for $\boldsymbol{\mu}$ corresponds to
 $\Big\{N(\mu_0,(\nu\lambda)^{-1}): \mu_0\in\mathbb{R}, \nu >0\Big\},$
 
-$p(y_{1:n}|\mu)=\propto \exp[n\bar{y}\lambda \mu-\frac{n \lambda}{2}\mu^2]$, assume the conjugate family of priors is
+$p(y_{1:n}|\mu)\propto \exp[n\bar{y}\lambda \mu-\frac{n \lambda}{2}\mu^2]$, assume the conjugate family of priors is
 
 \begin{align*}
 p(\mu)&\propto \mathbf{1}_{\{\mu\in\mathbb{R}\}}\exp[-n_0\frac{\lambda}{2}\mu^2+n_0t_0\lambda \mu] \\
@@ -128,7 +128,7 @@ Not strictly.  From a global perspective, all the climate issues are connected a
 
 - Identical: 
 
-Not sure. If the geographic factors are principal causes of weather, the distribution of snowfall in two cities may not be same. If the atomspheric factors are principal causes, the two cities' snowfall records happened in a same "rule" and are identical.
+Not sure. If the geographic factors are principal causes of weather, the distribution of snowfall in two cities may not be comparable. If the atomspheric factors are principal causes, the two cities' snowfall records happened under a same "rule" and are identical.
 
 - Normality: 
 
@@ -536,7 +536,7 @@ legend("topleft",pch=c(1,2),col=c("red","cornflowerblue"),
        legend=c("Aomori","Valdez"),bty="n")
 ```
 
-Setting $\nu=4$ represents a lower strenth of one observation to the information coming from the prior on $\mu_v$ and  $\mu_a$. It shows a higher stand diviation and a more overlapped posterior probability that the Valdez has a higher mean of snowfall is about `r round(prob.v.greater.a,3)`.
+Setting $\nu=4$ represents a lower strenth of one observation to the information coming from the prior on $\mu_v$ and  $\mu_a$. It shows a higher standard deviation and a more overlapped posterior probability that the Valdez has a higher mean of snowfall is about `r round(prob.v.greater.a,3)`.
 
 
 ```{r, echo=F,message=F,collapse=T,out.width='40%',fig.show='hold',fig.align='center'}
@@ -587,4 +587,4 @@ legend("topleft",pch=c(1,2),col=c("red","cornflowerblue"),
        legend=c("Aomori","Valdez"),bty="n")
 ```
 
-Setting $\nu=1/4$ represents a higher strenth of one observation to the information coming from the prior on $\mu_v$ and  $\mu_a$. It shows a lower stand diviation and two more seperated posterior probability distribution that the Valdez has a higher mean of snowfall is about `r round(prob.v.greater.a,3)`.
+Setting $\nu=1/4$ represents a higher strenth of one observation to the information coming from the prior on $\mu_v$ and  $\mu_a$. It shows a lower standard deviation and two more seperated posterior probability distribution that the Valdez has a higher mean of snowfall is about `r round(prob.v.greater.a,3)`.
