--- a/static/stat661/hw_stat661.Rmd
+++ b/static/stat661/hw_stat661.Rmd
@@ -532,50 +532,57 @@ Let $\Theta = \{(\theta_1,\theta_2) : \theta_1 > 0,\theta_2 > 0,\theta_1 + \thet
 
 \begin{tabular}{ c|c c c c c c|c }
 Genotype &1   &  2 & 3  & 4  & 5  & 6 \\
-Genotype & SS & II & FF & SI & SF & IF \\
 $p_j$  & $p_1=\theta^2_1$ & $p_2=\theta^2_2$ & $p_3=\theta^2_3$ & $p_4=2\theta_1\theta_2$ & $p_5=2\theta_1\theta_3$ & $p_6=2\theta_2\theta_3$ & $\sum^3_{j=1} \theta_j = 1$\\
-$N_j$        & $N_1$ &$N_2$ & $N_3$ & $N_4$& $N_5$& $N_6$& $\sum N_j=n$  \\
-$T$ &$N_1/n$ &$N_2/n$ & $N_3/n$& $N_4/n$ & $N_5/n$ & $N_6/n$ & $\sum \hat p_j=1$   \\
+$N_j$        & $N_1$ &$N_2$ & $N_3$ & $N_4$& $N_5$& $N_6$& $\sum N_j=n$
 \end{tabular}
 
-$N_j$ be the number of plants of genotype $j$ in a sample of n independent plants. $\sum N_j=n$
-
+$N_j$ be the number of plants of genotype $j$ in a sample of n independent plants. $\sum N_j=n$.
 Let
-$$t_0=N_4+N_5+N_6$$
-$$t_1=2N_1+N_4+N_5$$
-$$t_2=2N_2+N_4+N_6$$
-$$t_3=2n-t_1-t_2=2n-(2N_1+N_4+N_5)-(2N_2+N_4+N_6)=2N_3+N_5+N_6$$
+\begin{align*}
+t_0&=N_4+N_5+N_6\\
+t_1&=2N_1+N_4+N_5\\
+t_2&=2N_2+N_4+N_6\\
+t_3&=2n-t_1-t_2=2n-(2N_1+N_4+N_5)-(2N_2+N_4+N_6)=2N_3+N_5+N_6
+\end{align*}
 
-
-
-$$L(\theta_1,\theta_2,\theta_3|x_{1:n})=(\theta^2_1)^{N_1}(\theta^2_2)^{N_2} (\theta^2_3)^{N_3} (2\theta_1\theta_2)^{N_4} (2\theta_1\theta_3)^{N_5}(2\theta_2\theta_3)^{N_6}$$
-$$=\exp\left[(N_4+N_5+N_6)\ln2+(2N_1+N_4+N_5)\ln\theta_1+(2N_2+N_4+N_6)\ln\theta_2+(2N_3+N_5+N_6)\ln\theta_3\right]$$
-$$=\exp\left[t_0\ln2+t_1\ln\theta_1+t_2\ln\theta_2+t_3\ln\theta_3\right]$$
+\begin{align*}
+L(\theta_1,\theta_2,\theta_3|x_{1:n})&=(\theta^2_1)^{N_1}(\theta^2_2)^{N_2} (\theta^2_3)^{N_3} (2\theta_1\theta_2)^{N_4} (2\theta_1\theta_3)^{N_5}(2\theta_2\theta_3)^{N_6}\\
+&=\exp\left[(N_4+N_5+N_6)\ln2+(2N_1+N_4+N_5)\ln\theta_1+(2N_2+N_4+N_6)\ln\theta_2+(2N_3+N_5+N_6)\ln\theta_3\right]\\
+&=\exp\left[t_0\ln2+t_1\ln\theta_1+t_2\ln\theta_2+t_3\ln\theta_3\right]
+\end{align*}
 
 Substitude $\theta_3$ with $1-\theta_1-\theta_2$ and $t_3$ with $2n-t_1-t_2$
 
 $$L(\theta_1,\theta_2|x_{1:n})=\exp\left[t_0\ln2+t_1\ln\theta_1+t_2\ln\theta_2+(2n-t_1-t_2)\ln(1-\theta_1-\theta_2)\right]$$
-$$L(\theta_1,\theta_2|x_{1:n})=\underbrace{2^{t_0}}_{T(x)}\exp\left[\underbrace{t_1\ln\frac{\theta_1}{1-\theta_1-\theta_2}+t_2\ln\frac{\theta_2}{1-\theta_1-\theta_2}}_{T(\vec x)\cdot\eta(\vec\theta)}-\underbrace{2n\ln\frac{1}{1-\theta_1-\theta_2}}_{A(\eta)}\right]$$
+$$L(\theta_1,\theta_2|x_{1:n})=\underbrace{2^{t_0}}_{h(x)}\exp\left[\underbrace{t_1\ln\frac{\theta_1}{1-\theta_1-\theta_2}+t_2\ln\frac{\theta_2}{1-\theta_1-\theta_2}}_{T(\vec x)\cdot\eta(\vec\theta)}-\underbrace{2n\ln\frac{1}{1-\theta_1-\theta_2}}_{A(\eta)}\right]$$
 
 which is a 2-parameter exponential family.
 
 $$l(\theta_1,\theta_2)=t_0\ln2+t_1\ln\theta_1+t_2\ln\theta_2+t_3\ln(1-\theta_1-\theta_2)$$
-$$\frac{\partial}{\partial\theta_1} l(\theta_1,\theta_2)=\frac{t_1}{\theta_1}+\frac{-t_3}{1-\theta_1-\theta_2}\overset{set}{=}0$$
 
-$$\frac{\partial}{\partial\theta_2} l(\theta_1,\theta_2)=\frac{t_2}{\theta_2}+\frac{-t_3}{1-\theta_1-\theta_2}\overset{set}{=}0$$
-Find the solutions of 
-$$\begin{cases}\frac{t_1}{\hat\theta_1}=\frac{t_3}{1-\hat\theta_1-\hat\theta_2}\\\frac{t_2}{\hat\theta_2}=\frac{t_3}{1-\hat\theta_1-\hat\theta_2}\end{cases}$$
+\begin{align*}
+\frac{\partial}{\partial\theta_1} l(\theta_1,\theta_2)&=\frac{t_1}{\theta_1}+\frac{-t_3}{1-\theta_1-\theta_2}\overset{set}{=}0\\
+\frac{\partial}{\partial\theta_2} l(\theta_1,\theta_2)&=\frac{t_2}{\theta_2}+\frac{-t_3}{1-\theta_1-\theta_2}\overset{set}{=}0\\
+\frac{\partial^2}{\partial\theta_1^2} l(\theta_1,\theta_2)&=\frac{-t_1}{\theta_1^2}+\frac{-t_3}{(1-\theta_1-\theta_2)^2}<0\\
+\frac{\partial^2}{\partial\theta_2^2} l(\theta_1,\theta_2)&=\frac{-t_2}{\theta_2^2}+\frac{-t_3}{(1-\theta_1-\theta_2)^2}<0\\
+\frac{\partial^2}{\partial\theta_1\partial\theta_2} l(\theta_1,\theta_2)&=\frac{-t_3}{(1-\theta_1-\theta_2)^2}
+\end{align*}
 
-That is
+\begin{align*}
+[\frac{\partial^2}{\partial\theta_1^2} l(\theta_1,\theta_2)][\frac{\partial^2}{\partial\theta_2^2} l(\theta_1,\theta_2)]
+&=\left(\frac{-t_1}{\theta_1^2}+\frac{-t_3}{(1-\theta_1-\theta_2)^2}\right)\cdot
+\left(\frac{-t_2}{\theta_2^2}+\frac{-t_3}{(1-\theta_1-\theta_2)^2}\right)\\
+&=\frac{t_1t_2}{\theta_1^2\theta_2^2}+(\frac{t_1}{\theta_1^2}+\frac{t_2}{\theta_2^2})\frac{t_3}{(1-\theta_1-\theta_2)^2}+\left[\frac{-t_3}{(1-\theta_1-\theta_2)^2}\right]^2\\
+&>\left[\frac{-t_3}{(1-\theta_1-\theta_2)^2}\right]^2\\
+&=[\frac{\partial^2}{\partial\theta_1\partial\theta_2} l(\theta_1,\theta_2)]^2
+\end{align*}
+
+Therefore, the likelihood function is strictly concave and the unique MLEs exist. 
+The MLE solutions are
 
 $$\begin{cases}\hat\theta_1=\frac{t_1}{2n}=\frac{2N_1+N_4+N_5}{2n} \\ \hat\theta_2=\frac{t_2}{2n}=\frac{2N_2+N_4+N_6}{2n} \\\hat\theta_3=\frac{t_3}{2n}=\frac{2N_3+N_5+N_6}{2n}\end{cases}$$
 
-
-$$\frac{\partial^2}{\partial\theta_1^2} l(\theta_1,\theta_2)=\frac{-t_1}{\theta_1^2}+\frac{-t_3}{(1-\theta_1-\theta_2)^2}<0$$
-$$\frac{\partial^2}{\partial\theta_2^2} l(\theta_1,\theta_2)=\frac{-t_2}{\theta_2^2}+\frac{-t_3}{(1-\theta_1-\theta_2)^2}<0$$
-$$\frac{\partial^2}{\partial\theta_1\partial\theta_2} l(\theta_1,\theta_2)=\frac{\partial^2}{\partial\theta_2\partial\theta_1} l(\theta_1,\theta_2)=\frac{-t_3}{(1-\theta_1-\theta_2)^2}<0$$
-
-If
+<!--
 $$[\frac{\partial^2}{\partial\theta_1^2} l(\theta_1,\theta_2)][\frac{\partial^2}{\partial\theta_2^2} l(\theta_1,\theta_2)]<[\frac{\partial^2}{\partial\theta_1\partial\theta_2} l(\theta_1,\theta_2)]^2$$
 $$[\frac{-t_1}{\theta_1^2}+\frac{-t_3}{(1-\theta_1-\theta_2)^2}][\frac{-t_2}{\theta_2^2}+\frac{-t_3}{(1-\theta_1-\theta_2)^2}]<[\frac{-t_3}{(1-\theta_1-\theta_2)^2}]^2$$
 
@@ -584,9 +591,7 @@ Subtitude the $\vec\theta$ with $\hat{\vec\theta}$
 $$[\frac{4n^2}{t_1}+\frac{4n^2}{t_3}][\frac{4n^2}{t_2}+\frac{4n^2}{t_3}]<[\frac{4n^2}{t_3}]^2$$
 $$[\frac{t_3}{t_1}+1][\frac{t_3}{t_2}+1]<4n^2$$
 $$\frac{(2n-t_1)(2n-t_2)}{t_1t_2}<4n^2$$
-When satisfied this inequality,
-the likelihood function is strictly concave and the unique MLEs exist. 
-
+When satisfied this inequality, -->
 
 
 ### 2.3-12  Let $X_1,..,X_n$ be i.i.d. $\frac1\sigma f_0(\frac{x-\mu}\sigma)$, $\sigma>0, \mu\in R$, and assume for $w \equiv-\log f_0$ that $\omega''>0$ so that w is strictly convex, $\omega(\pm\infty) = \infty$. 
@@ -597,45 +602,123 @@ $\sum^n_{i=1}[\frac{(X_i-\mu)}\sigma w'(\frac{X_i-\mu}\sigma)-1]= 0$ have a uniq
 $$L(\mu,\sigma)=\prod_{i=1}^n\frac1\sigma f_0(\frac{x_i-\mu}\sigma)$$
 $$l(\mu,\sigma)=n\ln(\frac1\sigma)+ \sum_{i=1}^n\ln f_0(\frac{x_i-\mu}\sigma)=n\ln(\frac1\sigma)- \sum_{i=1}^n\omega(\frac{x_i-\mu}\sigma)$$
 
-By **Hint (b) Reparametrize by $a=\frac1\sigma$, $b=\frac\mu \sigma$ and consider varying a, b successively**.
+By *Hint (b) Reparametrize by $a=\frac1\sigma$, $b=\frac\mu \sigma$ and consider varying a, b successively*.
 
-By **Hint (a) The function $D(a,b) =\sum^n_{i=1} w(aX_i-b)-n\log a$ is strictly convex in $(a,b)$ and $\lim\limits_{(a,b)\to(a_0,b_0)} D(a,b) =\infty$ if either $a_0=0$ or $\infty$ or $b_0=\pm\infty$**,
+By *Hint (a) The function $D(a,b) =\sum^n_{i=1} w(aX_i-b)-n\log a$ is strictly convex in $(a,b)$ and $\lim\limits_{(a,b)\to(a_0,b_0)} D(a,b) =\infty$ if either $a_0=0$ or $\infty$ or $b_0=\pm\infty$*,
+
+By  *Hint (ii) If $\frac{\partial^2D}{\partial a^2}>0$, $\frac{\partial^2D}{\partial b^2}>0$ and $\frac{\partial^2D}{\partial a^2} \frac{\partial^2D}{\partial b^2}>(\frac{\partial^2D}{\partial b\partial b})^2$, then $D$ is strictly convex.* 
+
+**Check The function $D(a,b)=\sum^n_{i=1} w(aX_i-b)-n\log a$**
+
+\begin{align*}
+\frac{\partial D}{\partial a}&=-\frac{n}{ a}+\sum_{i=1}^{n}w'(ax_i-b)(x_i)\\
+\frac{\partial^2 D}{\partial a^2}&=\frac{n}{a^2}+\sum_{i=1}^{n}w''(ax_i-b)(x_i^2)>0\\
+\frac{\partial D}{\partial b}&=\sum_{i=1}^{n}w'(ax_i-b)(-1)\\
+\frac{\partial^2 D}{\partial b^2}&=\sum_{i=1}^{n}w''(ax_i-b)>0\\
+\frac{\partial D^2}{\partial a\partial b}&=\sum_{i=1}^{n}w''(ax_i-b)(-x_i)
+\end{align*}
+
+
+\begin{align*}
+[\frac{\partial^2 D}{\partial a^2}][\frac{\partial^2 D}{\partial b^2}]
+&=\left[\frac{n}{a^2}+\sum_{i=1}^{n}w''(ax_i-b)(x_i^2)\right]\cdot\sum_{i=1}^{n}w''(ax_i-b)\\
+&=\frac{n}{a^2}\sum_{i=1}^{n}w''(ax_i-b)+\left[\sum_{i=1}^{n}w''(ax_i-b)\right]^2(x_i^2)\\
+&>\left[\sum_{i=1}^{n}w''(ax_i-b)(x_i)\right]^2=[\frac{\partial D^2}{\partial a\partial b}]^2
+\end{align*}
+
+The function $D(a,b)$ is strictly convex in $(a,b)$ and $\lim\limits_{(a,b)\to(a_0,b_0)} D(a,b) =\infty$, if either $a_0=0$ or $\infty$ or $b_0=\pm\infty$
 
 $$l(\mu,\sigma)=n\ln(a)- \sum_{i=1}^n\omega(ax_i-b)=-D(a,b)$$
-Therefore, $l(\mu,\sigma)$ is strictly convex in $(\mu,\sigma)$
-
-$$\frac{\partial}{\partial\mu}l(\mu,\sigma)=\sum_{i=1}^n\omega'(\frac{x_i-\mu}\sigma)\frac1\sigma\overset{set}{=}0$$
-
-$$\frac{\partial}{\partial\sigma}l(\mu,\sigma)=\frac{-n}{\sigma}+\sum_{i=1}^n\omega'(\frac{x_i-\mu}\sigma)\cdot\frac{x_i-\mu}{\sigma^2}=\frac1\sigma\sum^n_{i=1}[\frac{(X_i-\mu)}\sigma w'(\frac{X_i-\mu}\sigma)-1]\overset{set}{=}0$$
-
-By Hint **(i) If a strictly convex function has a minimum, it is unique.**
-
+Therefore, $l(\mu,\sigma)$ is strictly concave in $(\mu,\sigma)$
+By *Hint (i) If a strictly convex function has a minimum, it is unique.*
 The equations have a unique solution $(\hat\mu,\hat\sigma)$ to get a maximum for $L(\mu,\sigma)$
+
+\begin{align*}
+\frac{\partial}{\partial\mu}l(\mu,\sigma)&=\sum_{i=1}^n\omega'(\frac{x_i-\mu}\sigma)\frac{-1}\sigma\overset{set}{=}0\\
+\frac{\partial}{\partial\sigma}l(\mu,\sigma)&=\frac{-n}{\sigma}+\sum_{i=1}^n\omega'(\frac{x_i-\mu}\sigma)\cdot\frac{x_i-\mu}{\sigma^2}=\frac1\sigma\sum^n_{i=1}[\frac{(x_i-\mu)}\sigma w'(\frac{x_i-\mu}\sigma)-1]\overset{set}{=}0
+\end{align*}
+
+\begin{align*}
+\sum^n_{i=1} w'(\frac{X_i-\hat\mu}{\hat\sigma})&= 0\\
+\sum^n_{i=1}[\frac{(X_i-\hat\mu)}{\hat\sigma} w'(\frac{X_i-\hat\mu}{\hat\sigma})-1]&=0
+\end{align*}
+
 
 
 (b) Give an algorithm such that starting at $\hat\mu^0=0,\hat\sigma^0=1,\hat\mu^{(i)}\to\hat\mu,\hat\sigma^{(i)}\to\hat\sigma$. 
 
+Using **Coordinate-Ascent Algorithm**, get the unique solution of $(\hat\mu^{(i)},\hat\sigma^{(i)})$ by solving
 
+\begin{align*}
+\sum^n_{i=1} w'(\frac{X_i-\hat\mu^{(1)}}{\hat\sigma^{(0)}})&= 0&&\text{plugin}\hat\sigma^0,\text{ get }\hat\mu^{(1)}\\
+\sum^n_{i=1}[\frac{(X_i-\hat\mu^{(1)})}{\hat\sigma^{(1)}}  w'(\frac{X_i-\hat\mu^{(1)}}{\hat\sigma^{(1)}})&=n&&\text{plugin}\hat\mu^{(1)},\text{get}\hat\sigma^{(1)}\\
+&\cdots\\
+\sum^n_{i=1} w'(\frac{X_i-\hat\mu^{(i)}}{\hat\sigma^{(i-1)}})&= 0&&\text{plugin}\hat\sigma^{(i-1)},\text{ get }\hat\mu^{(i)}\\
+\sum^n_{i=1}[\frac{(X_i-\hat\mu^{(i)})}{\hat\sigma^{(i)}}  w'(\frac{X_i-\hat\mu^{(i)}}{\hat\sigma^{(i)}})]&=n&&\text{plugin}\hat\mu^{(i)},\text{ get }\hat\sigma^{(i)}
+\end{align*}
 
+Using **Newton-Raphson Method**, get the unique solution of $(\hat\mu^{(i)},\hat\sigma^{(i)})$ by solving
 
+\begin{align*}
+\hat\mu^{(i)}&=\hat\mu^{(i-1)}+\frac{l(\mu,\sigma)}{\frac{\partial}{\partial\mu}l(\mu,\sigma)}=\hat\mu^{(i-1)}+\frac{n\ln(\frac1{\sigma^{(i-1)}})- \sum_{i=1}^n\omega(\frac{x_i-\mu^{(i-1)}}{\sigma^{(i-1)}})}{\sum^n_{i=1} w'(\frac{X_i-\hat\mu^{(i-1)}}{\hat\sigma^{(i-1)}})}&&\text{plugin}\hat\mu^{(i-1)} \text{ and } \hat\sigma^{(i-1)},\text{ get }\hat\mu^{i}\\
+\hat\sigma^{(i)}&=\hat\sigma^{(i-1)}+\frac{l(\mu,\sigma)}{\frac{\partial}{\partial\sigma}l(\mu,\sigma)}=\hat\sigma^{(i-1)}+\frac{n\ln(\frac1{\sigma^{(i-1)}})- \sum_{i=1}^n\omega(\frac{x_i-\mu^{(i-1)}}{\sigma^{(i-1)}})}{\sum^n_{i=1}[\frac{(X_i-\hat\mu^{(i-1)})}{\hat\sigma^{(i-1)}}  w'(\frac{X_i-\hat\mu^{(i-1)}}{\hat\sigma^{(i-1)}})-1]}&&\text{plugin} \hat\mu^{(i-1)} \text{ and } \hat\sigma^{(i-1)},\text{ get }\hat\sigma^{(i)}
+\end{align*}
 
-
-
-
-
-
+By **Theorem 2.4.2**, $f_0$ is the canonical exponential familiy genertated by $(T,h)$, the natural parameter space $\varepsilon$ is open and the family is of rank $k$. Set $t_0=T(x)$, $t_0\in C_T^0$, $\hat\eta^{(i)}=(\hat\mu^{(i)},\hat\sigma^{(i)})\to\hat\eta=(\hat\mu,\hat\sigma) \text{   as   } i\to\infty$
 
 (c) Show that for the logistic distribution $F_0(x) = [1 + \exp{\{-x\}}]^{-1}$, w is strictly convex and give the likelihood equations for $\mu$ and $\sigma$. (See Example 2.4.3.) 
 
-Hint: 
+$$F'_0(\frac{x-\mu}{\sigma}) =\frac1{\sigma}f_0(\frac{x-\mu}{\sigma}) =\frac1{\sigma}\frac{\exp[-\frac{x-\mu}{\sigma}]}{(1 + \exp[-\frac{x-\mu}{\sigma}])^{2}}$$
+
+$$\omega=-\ln f_0(x) = 2\ln(1 + \exp[-\frac{x-\mu}{\sigma}])+\frac{x-\mu}{\sigma}$$
+
+Check $w$ is strictly convex.
+
+\begin{align*}
+\frac{\partial\omega}{\partial x}
+&=\frac{1}{\sigma}-\frac{2\exp[-\frac{x-\mu}{\sigma}]}{\sigma(1 + \exp[-\frac{x-\mu}{\sigma}])}=\frac{1-\exp[-\frac{x-\mu}{\sigma}]}{\sigma(1 + \exp[-\frac{x-\mu}{\sigma}])}\\
+\frac{\partial^2\omega}{\partial x^2}
+&=\frac{2\exp[-\frac{x-\mu}{\sigma}]}{\sigma^2(1 + \exp[-\frac{x-\mu}{\sigma}])^2}=\frac{2}{\sigma^2}f_0(x)>0
+\end{align*}
+
+Therefore, $w$ is strictly convex.
+By part (a), $l(\mu,\sigma)=-\sum_{i=1}^n\omega$ is strictly concave in $(\mu,\sigma)$.
+The likelihood equations for $\mu$ and $\sigma$ are
+
+\begin{align*}
+\sum^n_{i=1} w'(\frac{X_i-\hat\mu}{\hat\sigma})&=\sum_{i=1}^n\frac{1-\exp[-\frac{x_i-\hat\mu}{\hat\sigma}]}{\hat\sigma(1 + \exp[-\frac{x_i-\hat\mu}{\hat\sigma}])}=0\\
+\sum^n_{i=1}[\frac{(X_i-\hat\mu)}{\hat\sigma} w'(\frac{X_i-\hat\mu}{\hat\sigma})-1]&=\sum_{i=1}^n\left[\frac{(x_i-\hat\mu)(1-\exp[-\frac{x_i-\hat\mu}{\hat\sigma}])}{\hat\sigma^2(1 + \exp[-\frac{x_i-\hat\mu}{\hat\sigma}])}-1\right]=0
+\end{align*}
 
 
 
- Note: You may use without proof (see Appendix B.9).
+
+\pagebreak
+
+\begin{align*}
+\frac{\partial\omega}{\partial\mu}
+&=-\frac{1}{\sigma}+\frac{2\exp[-\frac{x-\mu}{\sigma}]}{\sigma(1 + \exp[-\frac{x-\mu}{\sigma}])}=\frac{1}{\sigma}\left\{2\exp[-\frac{x-\mu}{\sigma}]F_0(x)-1\right\}=\frac{\exp[-\frac{x-\mu}{\sigma}]-1}{\sigma(1 + \exp[-\frac{x-\mu}{\sigma}])}\\
+\frac{\partial^2\omega}{\partial\mu^2}
+&=\frac{2\exp[-\frac{x-\mu}{\sigma}]}{\sigma^2(1 + \exp[-\frac{x-\mu}{\sigma}])^2}=\frac{2}{\sigma^2}f_0(x)>0\\
+\frac{\partial\omega}{\partial\sigma}
+&=\frac{x-\mu}{\sigma^2}\left\{-1+\frac{2\exp[-\frac{x-\mu}{\sigma}]}{1 + \exp[-\frac{x-\mu}{\sigma}]}\right\}=\frac{x-\mu}{\sigma^2}\left\{2\exp[-\frac{x-\mu}{\sigma}]F_0(x)-1\right\}=\frac{(x-\mu)(\exp[-\frac{x-\mu}{\sigma}]-1)}{\sigma^2(1 + \exp[-\frac{x-\mu}{\sigma}])}\\
+\frac{\partial^2\omega}{\partial\sigma^2}
+&=\frac{2(x-\mu)^2\exp[-\frac{x-\mu}{\sigma}]+2\sigma(x-\mu)(1-\exp[-\frac{x-\mu}{\sigma}])}{\sigma^4\left(1+\exp[-\frac{x-\mu}{\sigma}]\right)^2}>0\\
+\frac{\partial\omega^2}{\partial\mu\partial\sigma}
+&=\frac{2(x-\mu)\exp[-\frac{x-\mu}{\sigma}]+\sigma(1-\exp[-\frac{x-\mu}{\sigma}])}{\sigma^3(1 + \exp[-\frac{x-\mu}{\sigma}])^2}
+\end{align*}
 
 
+\begin{align*}
+[\frac{\partial^2\omega}{\partial\mu^2}][\frac{\partial^2\omega}{\partial\sigma^2}]
+&=\frac{2\exp[-\frac{x-\mu}{\sigma}]}{\sigma^2(1 + \exp[-\frac{x-\mu}{\sigma}])^2}\cdot
+\frac{2(x-\mu)^2\exp[-\frac{x-\mu}{\sigma}]+2\sigma(x-\mu)(1-\exp[-\frac{x-\mu}{\sigma}])}{\sigma^4\left(1+\exp[-\frac{x-\mu}{\sigma}]\right)^2}\\
+&<\frac{4(x-\mu)^2\exp[-2\frac{x-\mu}{\sigma}]+4\sigma(x-\mu)\exp[-\frac{x-\mu}{\sigma}](1-\exp[-\frac{x-\mu}{\sigma}])+\sigma^2(1-\exp[-\frac{x-\mu}{\sigma}])^2}{\sigma^6\left(1+\exp[-\frac{x-\mu}{\sigma}]\right)^4}\\
+&=\left[\frac{2(x-\mu)\exp[-\frac{x-\mu}{\sigma}]+\sigma(1-\exp[-\frac{x-\mu}{\sigma}])}{\sigma^3(1 + \exp[-\frac{x-\mu}{\sigma}])^2}\right]^2\\
+&=[\frac{\partial\omega^2}{\partial\mu\partial\sigma}]^2
+\end{align*}
 
-  (ii) If $\frac{\partial^2D}{\partial a^2}>0$, $\frac{\partial^2D}{\partial b^2}>0$ and $\frac{\partial^2D}{\partial a^2} \frac{\partial^2D}{\partial b^2}>(\frac{\partial^2D}{\partial b\partial b})^2$, then $D$ is strictly convex. 
+
 
 ## HW6 
 
